@@ -477,6 +477,7 @@ exit 0
 
 %changelog
 * Tue Jul  1 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.18
+- don't attempt to remove dbenv on --rebuilddb.
 - rebuild.
 
 * Tue Jun 24 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.17
